spec/lib/cli/log/errors/noConfigFound.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive([
      {
        it: 'returns `noConfigFound` error message',
        i: [],
        e: "No spec config file (" + (dd.helper.c.bright('ddry.json')) + ") found. Run 'ddry init' to create it first."
      }
    ]);
  };

}).call(this);
